refactor ExternalResource and ExternalResourceRef to be based on URI